add: local, cloud and hybrid model presets
